--- a/index.html
+++ b/index.html
@@ -5,16 +5,13 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="אפליקציית תשלומים שנוצרה עם React"
-    />
+    <meta name="description" content="אפליקציית תשלומים" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <title>אפליקציית תשלומים</title>
   </head>
   <body>
-    <noscript>עליך להפעיל JavaScript כדי להריץ את האפליקציה הזו.</noscript>
+    <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
   </body>
 </html>
